# ledger-scrolls

./: .gitignore  BUILDING_SCROLLS.md  CONTRIBUTING.md  LICENSE  P2P_DEVELOPMENT_ROADMAP.md  PROTOCOL.md  README.md  SECURITY.md  bible.html  calculator.html  cardano-constitution-reader  chess-manifest.webmanifest  config.yaml  constitution.html  create.html  first-video.html  gen.mjs  index.html  install.sh  latest.html  leaks.html  ledger-book.html  ledger-chess-beta-game.html  ledger-chess-beta.html  ledger-chess.html  ledger-scrolls  ledger-scrolls.py  legal.html  lightweight_p2p_client_design.md  manifest.webmanifest  media.html  neon-door.html  preview.html  reader.html  requirements.txt  robots.txt  scrolls.js  sitemap.xml  sw-chess.js  sw-yearbook.js  (+5 more)
BEACNpool's Library/: README.md
SRC/: SETUP_GUIDE.md  __init__.py  cli.py  requirements.txt  test_installation.py  ui.py  viewer.py  viewer_v2.py
app/: build-log.txt  package-lock.json  package.json
assets/: index-B2SVOt6t.js  index-CfR-E2OC.js
build-a-reader/: index.html
cardano_constitution_reader/: .gitignore  CONSTITUTION_READER_README.md  README.md  __pycache__  cardano_constitution_reader.py  constitution_mints_template.json  requirements.txt
config/: manifest.json
conformance/: README.md  check_schemas.py  gen_chain_fixture.py  manifest.json  run_conformance.mjs  run_conformance.py
registry/tooling/: README.md  pyproject.toml
registry/tooling/registry_tooling/: __init__.py  hashutil.py  verify.py
registry/tooling/tests/: test_datum_decoding.py  test_signed_heads.py  test_verify_offline.py
(+199 files in other folders)
