[project]
name = "ledger-scrolls-registry"
version = "0.0.1"
description = "Reference tooling for Ledger Scrolls Registry (DNS for Scrolls)"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
lsr-verify = "registry_tooling.verify:main"
lsr-hash = "registry_tooling.hashutil:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
